--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -24,20 +24,20 @@
 							<input id="token" type="hidden" th:value="${tokenString}">
 							<div class="field">
 								<div class="control">
-									<input class="input" type="email" placeholder="Your Email"
+									<input class="input" type="email" th:placeholder="#{email}"
 										id="email" autofocus="" required>
 								</div>
 							</div>
 							<div class="field">
 								<div class="control">
-									<input class="input" type="password" placeholder="New password"
+									<input class="input" type="password" th:placeholder="#{new-password}"
 										id="password" required>
 								</div>
 							</div>
 							<div class="field">
 								<div class="control">
 									<input class="input" type="password" id="password-repeat"
-										placeholder="Repeat password" required>
+										th:placeholder="#{password-repeat}" required>
 								</div>
 							</div>
 							<div class="notification is-danger" id="password-info"
