--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -23,7 +23,7 @@
 						<form th:action="@{/password/reset}" method="POST" id="form">
 							<div class="field">
 								<div class="control">
-									<input class="input" type="email" placeholder="Email address"
+									<input class="input" type="email" th:placeholder="#{email}"
 										autofocus="" name="email" id="email" required>
 								</div>
 							</div>
@@ -39,7 +39,7 @@
 								</div>
 								<div class="field">
 									<input class="input" id="captcha" name="captchaText"
-										placeholder="Captcha" autocomplete="off" required>
+										th:placeholder="#{captcha}" autocomplete="off" required>
 								</div>
 							</div>
 							<button class="button" th:text="#{submit}"></button>
