--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -161,7 +161,7 @@
 						</div>
 						<div class="field">
 							<input class="input" id="captcha" name="captchaText"
-								placeholder="Captcha" autocomplete="off" required>
+								th:placeholder="#{captcha}" autocomplete="off" required>
 						</div>
 						<div class="field" style="height: 42px">
 							<button class="button is-info" style="float: right"
