--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -12,41 +12,44 @@
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/search.css" />
+<link th:if="${user.theme == 1}" rel="stylesheet" href="/css/alovoa-dark.css" />
 <title th:text="#{search.title}"></title>
 </head>
 <body>
 	<div id="main-logged-in">
 		<header th:insert="fragments.html::header-logged-in"></header>
-		<div class="section">
+		<div class="section" id="filter-div">
 			<div class="container is-small" style="display: flex">
 				<div style="flex-grow: 1">
 					<label class="label" th:text="#{search.max-distance}"></label>
 					<div class="slider-container"
 						style="padding-top: 8px; padding-bottom: 8px;">
-						<input class="slider is-info" step="1" min="1" max="50"
+						<input class="slider is-info" step="1" min="1" max="100"
 							value="20" type="range" id="max-distance-slider">
 						<p id="max-distance-display">20</p>
 						<div style="padding-left: 4px"></div>
 						<span th:text="#{km}"></span>
 					</div>
 				</div>
-				<div style="padding-left: 24px;"></div>
-				<div>
-					<label class="label" th:text="#{sort}"></label>
-					<div class="select">
-						<select id="sort">
-							<option value="1" th:text="#{search.sort.filter.distance}"></option>
-							<option value="2" th:text="#{search.sort.filter.active}"></option>
-						</select>
+				<div id="distance-spacing" style="padding-left: 24px;"></div>
+				<div style="display: flex;">
+					<div style="flex: 1;">
+						<label class="label" th:text="#{sort}"></label>
+						<div class="select">
+							<select id="sort">
+								<option value="1" th:text="#{search.sort.filter.distance}"></option>
+								<option value="2" th:text="#{search.sort.filter.active}"></option>
+							</select>
+						</div>
 					</div>
-				</div>
-				<div style="padding-left: 24px;"></div>
-				<div>
-
-					<label class="label" th:text="#{search}"></label>
-					<button class="button colored is-info" onclick="search()">
-						<i class="fa fa-search"></i>
-					</button>
+					<div id="sort-search-spacing" style="padding-left: 24px;"></div>
+					<div>
+	
+						<label class="label" th:text="#{search}"></label>
+						<button class="button colored is-info" onclick="search()">
+							<i class="fa fa-search"></i>
+						</button>
+					</div>
 				</div>
 			</div>
 		</div>
