--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/search.css" />
+<link th:if="${currUser.theme == 1}" rel="stylesheet" href="/css/alovoa-dark.css" />
 <title th:value="${user.firstName}"></title>
 </head>
 <body>
