--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -39,6 +39,8 @@
 							<select id="sort">
 								<option value="1" th:text="#{search.sort.filter.distance}"></option>
 								<option value="2" th:text="#{search.sort.filter.active}"></option>
+								<option value="3" th:text="#{search.sort.filter.interests}"></option>
+								<option value="4" th:text="#{search.sort.filter.donations}"></option>
 							</select>
 						</div>
 					</div>
